--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "youtube_analytics_project"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+google-api-python-client = "^2.83.0"
 
 
 [build-system]
